<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2026 Andrey Tolpeev

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
<string name="app_name">TeamCityApp</string>
<string name="text_progress_bar_loading">Authenticating…</string>
<string name="text_app_description">TeamCity in your pocket</string>
<string name="text_try_it_out">Haven\'t set up your server yet or having issues signing in? Still want to give it a try?</string>
<string name="text_button_try_it_out">Tap here</string>
<string name="text_login_button">Login</string>
<string name="info_unauthorized_dialog_title">Oh Snap!</string>
<string name="info_try_it_out_title">Hey there</string>
<string name="info_unauthorized_dialog_content">It seems that your TC server doesn\'t have Guest User enabled. In order to use the app make sure it is enabled. For more details see <a href="https://confluence.jetbrains.com/display/TCD10/Enabling+Guest+Login">TC help</a>.</string>
<string name="info_try_it_out_dialog_content">Want to try the app out?\nWe can sign you in as a guest to official &lt;a href="%s">Jetbrains TeamCity server&lt;/a>.</string>
<string name="dialog_try_it_out_title">Try it out</string>
</resources>
